2003-08-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c: remove GLib::Object#property.

	* src/rbgobj_enums.c (rbgobj_get_enum, rbgobj_get_flags): 
	create temporary enum/flags object if the argument is an integer.

	* src/rbgobject.c (rbgobj_initialize_object): raise RuntimeError
	if the argument is NULL.

2003-08-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_boxed.c: define GLib::Boxed#initialize which simply raise
	TypeError.

	* src/rbglib2.rb: fix format of GLib::Flags#inspect.

	* src/glib2.def, src/global.h, src/rbgobj_enums.c, src/rbgobj_type.c,
	src/rbgobj_value.c, src/rbgobject.h, src/lib/glib2.rb: new classes
	GLib::Enum and GLib::Flags.

2003-08-17  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/lib/glib2.rb: add new file.

	* src/lib/mkmf-gnome2.rb (PKGConfig.have_package): don't use
	Array#quote. Because mkmf.rb of ruby-1.6 doesn't provide this method.

2003-08-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobject.h, src/rbgobj_type.c, let rbgobj_define_class() to
	take `const gchar*', not `gchar*'.

2003-08-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/lib/mkmf-gnome2.rb (PKGConfig.have_package): append linker
	flags other than -l and -L into $LDFLAGS.

2003-08-09  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c (gobj_sig_emit): fix to setup arg.self.

2003-08-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/depend: use old style
	* src/glib2.def: Add rbgobj_constant_remap.

2003-08-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_valuetypes.c: use GHashTable instead of Ruby's Hash
	for reference counting. Using Ruby's Hash may cause segmentaion fault
	when ruby exits.

	* src/rbgobj_closure.c: use GHashTable instead of Ruby's Hash
	for the same reason as src/rbgobj_valuetypes.c.

	* src/rbgobject.c (rbgobj_gobject_initialize): don't warn if the
	instance type is a subtype of the class type.

2003-08-03  Masao Mutoh <mutoh@highway.ne.jp>
